--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
-  "name": "template",
+  "name": "team-management",
   "private": true,
   "license": "BSD 3-Clause",
-  "scripts": {
-    "prepare": "husky"
-  },
+  "workspaces": [
+    "app/**/*",
+    "ui/**/*"
+  ],
   "devDependencies": {
     "@atls/code-service": "0.1.4",
     "@atls/config-eslint": "0.0.12",
@@ -14,10 +15,18 @@
     "@types/eslint": "^8",
     "@types/jest": "29.5.12",
     "@types/node": "20.12.8",
+    "@types/react": "18.2.48",
+    "@types/react-dom": "18.2.18",
     "eslint": "8.57.0",
     "husky": "9.0.11",
     "prettier": "3.1.1",
     "typescript": "5.2.2"
   },
-  "packageManager": "yarn@4.2.1"
+  "packageManager": "yarn@4.2.1",
+  "linterIgnorePatterns": [
+    "**/next.config.js"
+  ],
+  "typecheckIgnorePatterns": [
+    "**/next-env.d.ts"
+  ]
 }
