--- a/package.json
+++ b/package.json
@@ -5,6 +5,10 @@
   "scripts": {
     "prepare": "husky"
   },
+  "dependencies": {
+    "@emotion/react": "11.11.4",
+    "react": "18.3.1"
+  },
   "devDependencies": {
     "@atls/code-service": "0.1.4",
     "@atls/config-eslint": "0.0.12",
@@ -14,6 +18,7 @@
     "@types/eslint": "^8",
     "@types/jest": "29.5.12",
     "@types/node": "20.12.8",
+    "@types/react": "^18",
     "eslint": "8.57.0",
     "husky": "9.0.11",
     "prettier": "3.1.1",
