--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,6 @@ services:
     working_dir: /workspace
     volumes:
       - ./:/workspace
-    entrypoint: yarn workspace @identity/renderer-entrypoint dev
+    entrypoint: yarn workspace @app/renderer-entrypoint dev
     ports:
       - '3000:3000'
