--- a/app/entrypoints/renderer/package.json
+++ b/app/entrypoints/renderer/package.json
@@ -10,6 +10,9 @@
     "start": "node dist/src/index.cjs"
   },
   "dependencies": {
+    "@ui/checkbox": "workspace:*",
+    "@ui/layout": "workspace:*",
+    "@ui/progress": "workspace:*",
     "next": "14.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0"
