--- a/app/entrypoints/renderer/package.json
+++ b/app/entrypoints/renderer/package.json
@@ -10,6 +10,8 @@
 		"start": "node dist/src/index.cjs"
 	},
 	"dependencies": {
+		"@ui/input": "workspace:*",
+		"@ui/theme": "workspace:*",
 		"next": "14.1.0",
 		"react": "18.2.0",
 		"react-dom": "18.2.0"
@@ -18,6 +20,8 @@
 		"@types/node": "20.11.5",
 		"@types/react": "18.3.1",
 		"@types/react-dom": "18.3.0",
+		"@ui/input": "workspace:*",
+		"@ui/theme": "workspace:*",
 		"typescript": "5.2.2"
 	}
 }
