--- a/ui/theme/package.json
+++ b/ui/theme/package.json
@@ -1,18 +1,15 @@
 {
-  "name": "@ui/theme",
-  "version": "0.0.1",
-  "private": true,
-  "license": "BSD-3-Clause",
-  "exports": {
-    ".": "./src/index.ts"
-  },
-  "devDependencies": {
-    "@emotion/react": "11.11.4",
-    "@types/react": "18.3.1",
-    "react": "18.2.0"
-  },
-  "peerDependencies": {
-    "@emotion/react": "*",
-    "react": "*"
-  }
+	"name": "@ui/theme",
+	"version": "0.0.1",
+	"license": "BSD-3-Clause",
+	"main": "src/index.ts",
+	"devDependencies": {
+		"@emotion/react": "11.11.4",
+		"@types/react": "18.3.1",
+		"react": "18.2.0"
+	},
+	"peerDependencies": {
+		"@emotion/react": "*",
+		"react": "*"
+	}
 }
