--- a/app/entrypoints/renderer/package.json
+++ b/app/entrypoints/renderer/package.json
@@ -12,8 +12,10 @@
   "dependencies": {
     "@ui/checkbox": "workspace:*",
     "@ui/divider": "workspace:*",
+    "@ui/icons": "workspace:*",
     "@ui/layout": "workspace:*",
     "@ui/progress": "workspace:*",
+    "@ui/theme": "workspace:*",
     "next": "14.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0"
