--- a/ui/icons/package.json
+++ b/ui/icons/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@ui/checkbox",
+  "name": "@ui/icons",
   "version": "0.0.1",
   "private": true,
   "license": "BSD-3-Clause",
@@ -8,11 +8,13 @@
   },
   "main": "src/index.ts",
   "dependencies": {
-    "@atls-ui-parts/checkbox": "0.1.1"
+    "@ui/icons": "workspace:*"
   },
   "devDependencies": {
     "@emotion/react": "11.11.4",
     "@emotion/styled": "11.11.5",
+    "@types/react": "18.3.1",
+    "@types/react-dom": "18.3.0",
     "@types/styled-system": "^5",
     "styled-system": "5.1.5",
     "styled-tools": "1.7.2"
