--- a/app/entrypoints/renderer/package.json
+++ b/app/entrypoints/renderer/package.json
@@ -1,28 +1,29 @@
 {
-  "name": "@app/renderer-entrypoint",
-  "version": "0.0.1",
-  "license": "BSD-3-Clause",
-  "type": "module",
-  "scripts": {
-    "build": "yarn next build src --no-lint && rm ./src/.next/standalone/package.json ; cp -r ./src/.next/standalone ./dist && cp -r ./src/.next/static ./dist/src/.next/static && mv ./dist/src/server.js ./dist/src/index.cjs",
-    "dev": "yarn next dev src",
-    "prepack": "run build",
-    "start": "node dist/src/index.cjs"
-  },
-  "dependencies": {
-    "@emotion/react": "11.9.3",
-    "@ui/input": "workspace:*",
-    "@ui/theme": "workspace:*",
-    "next": "14.1.0",
-    "react": "18.2.0",
-    "react-dom": "18.2.0"
-  },
-  "devDependencies": {
-    "@types/node": "20.11.5",
-    "@types/react": "18.3.1",
-    "@types/react-dom": "18.3.0",
-    "@ui/input": "workspace:*",
-    "@ui/theme": "workspace:*",
-    "typescript": "5.2.2"
-  }
+	"name": "@app/renderer-entrypoint",
+	"version": "0.0.1",
+	"license": "BSD-3-Clause",
+	"type": "module",
+	"scripts": {
+		"build": "yarn next build src --no-lint && rm ./src/.next/standalone/package.json ; cp -r ./src/.next/standalone ./dist && cp -r ./src/.next/static ./dist/src/.next/static && mv ./dist/src/server.js ./dist/src/index.cjs",
+		"dev": "yarn next dev src",
+		"prepack": "run build",
+		"start": "node dist/src/index.cjs"
+	},
+	"dependencies": {
+		"@emotion/react": "11.9.3",
+		"@ui/input": "workspace:*",
+		"@ui/switch": "workspace:*",
+		"@ui/theme": "workspace:*",
+		"next": "14.1.0",
+		"react": "18.2.0",
+		"react-dom": "18.2.0"
+	},
+	"devDependencies": {
+		"@types/node": "20.11.5",
+		"@types/react": "18.3.1",
+		"@types/react-dom": "18.3.0",
+		"@ui/input": "workspace:*",
+		"@ui/theme": "workspace:*",
+		"typescript": "5.2.2"
+	}
 }
