--- a/app/entrypoints/renderer/package.json
+++ b/app/entrypoints/renderer/package.json
@@ -10,7 +10,14 @@
     "start": "node dist/src/index.cjs"
   },
   "dependencies": {
+    "@emotion/react": "11.11.3",
+    "@ui/avatar": "workspace:*",
+    "@ui/button": "workspace:*",
     "@ui/card": "workspace:*",
+    "@ui/image": "workspace:*",
+    "@ui/layout": "workspace:*",
+    "@ui/sidebar": "workspace:*",
+    "@ui/theme": "workspace:*",
     "next": "14.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0"
@@ -20,5 +27,8 @@
     "@types/react": "18.3.1",
     "@types/react-dom": "18.3.0",
     "typescript": "5.2.2"
+  },
+  "peerDependencies": {
+    "styled-tools": "*"
   }
 }
