feat: added files to commit

--- a/app/entrypoints/renderer/package.json
+++ b/app/entrypoints/renderer/package.json
@@ -20,15 +20,13 @@
     "@ui/theme": "workspace:*",
     "next": "14.1.0",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "styled-tools": "1.7.2"
   },
   "devDependencies": {
     "@types/node": "20.11.5",
     "@types/react": "18.3.1",
     "@types/react-dom": "18.3.0",
     "typescript": "5.2.2"
-  },
-  "peerDependencies": {
-    "styled-tools": "*"
   }
 }
