--- a/ui/layout/package.json
+++ b/ui/layout/package.json
@@ -1,19 +1,17 @@
 {
-  "name": "@ui/card",
+  "name": "@ui/layout",
   "version": "0.0.1",
   "license": "BSD-3-Clause",
   "main": "src/index.ts",
   "dependencies": {
+    "@atls-ui-parts/layout": "0.1.1",
     "@emotion/react": "11.11.3",
     "@emotion/styled": "11.11.0",
-    "@ui/image": "workspace:*",
-    "@ui/layout": "workspace:*",
-    "@ui/tag": "workspace:*",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "styled-system": "5.1.5"
   },
   "devDependencies": {
-    "@types/react": "18.2.48",
-    "@types/react-dom": "18.2.18"
+    "@types/react": "18.3.1",
+    "@types/styled-system": "5.1.22"
   }
 }
