--- a/ui/theme/package.json
+++ b/ui/theme/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.1",
   "private": true,
   "license": "BSD-3-Clause",
+  "main": "src/index.ts",
   "exports": {
     ".": "./src/index.ts"
   },
