fix: sidebar dependencies

--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -7,3 +7,8 @@ enableGlobalCache: false
 preferReuse: true
 
 yarnPath: .yarn/releases/yarn-remote.cjs
+
+packageExtensions:
+  '@atls-ui-parts/sidebar@*':
+    peerDependencies:
+      '@atls-ui-parts/switch': '*'
