--- a/app/entrypoints/renderer/package.json
+++ b/app/entrypoints/renderer/package.json
@@ -11,6 +11,7 @@
 	},
 	"dependencies": {
 		"@emotion/react": "11.9.3",
+		"@ui/input": "workspace:*",
 		"@ui/theme": "workspace:*",
 		"next": "14.1.0",
 		"react": "18.2.0",
