--- a/ui/switch/package.json
+++ b/ui/switch/package.json
@@ -1,24 +1,26 @@
 {
-  "name": "@ui/input",
+  "name": "@ui/switch",
   "main": "src/index.ts",
   "dependencies": {
-    "@atls-ui-parts/input": "0.1.1",
-    "@ui/utils": "workspace:*"
+    "@atls-ui-parts/switch": "0.1.1"
   },
   "devDependencies": {
-    "@emotion/react": "11.11.4",
+    "@emotion/react": "11.11.3",
     "@emotion/styled": "11.11.0",
     "@types/styled-system": "^5",
+    "framer-motion": "10.16.1",
     "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react-laag": "2.0.5",
     "styled-system": "5.1.5",
     "styled-tools": "1.7.2"
   },
   "peerDependencies": {
-    "@emotion/react": "*",
+    "@emotion/react": "11.11.3",
     "@emotion/styled": "*",
+    "framer-motion": "10.16.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-laag": "2.0.5",
     "styled-system": "*",
     "styled-tools": "*"
   }
