--- a/ui/icons/package.json
+++ b/ui/icons/package.json
@@ -3,25 +3,33 @@
   "version": "0.0.1",
   "private": true,
   "license": "BSD-3-Clause",
-  "exports": {
-    ".": "./src/index.ts"
-  },
   "main": "src/index.ts",
+  "scripts": {
+    "build": "generate-icons src/ -i /ui/icons/icons"
+  },
   "dependencies": {
     "@ui/icons": "workspace:*"
   },
   "devDependencies": {
+    "@atls-ui-generators/icons": "0.0.2",
     "@emotion/react": "11.11.4",
     "@emotion/styled": "11.11.5",
     "@types/react": "18.3.1",
     "@types/react-dom": "18.3.0",
     "@types/styled-system": "^5",
+    "glob": "10.3.15",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
     "styled-system": "5.1.5",
     "styled-tools": "1.7.2"
   },
   "peerDependencies": {
+    "@atls-ui-generators/icons": "0.0.2",
     "@emotion/react": "*",
     "@emotion/styled": "*",
+    "@types/react": "18.3.1",
+    "@types/react-dom": "18.3.0",
+    "glob": "10.3.15",
     "styled-system": "*",
     "styled-tools": "*"
   }
