fix: icons generator

--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -5,9 +5,9 @@ defaultSemverRangePrefix: ''
 enableGlobalCache: false
 
 packageExtensions:
-  '@atls-ui-generators/icons@*':
-    peerDependencies:
-      glob: '*'
+  glob-promise@*:
+    dependencies:
+      glob: '7.2.3'
 
 preferReuse: true
 
