--- a/app/entrypoints/renderer/package.json
+++ b/app/entrypoints/renderer/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@emotion/react": "11.9.3",
+    "@ui/icons-test": "workspace:*",
     "@ui/input": "workspace:*",
     "@ui/switch": "workspace:*",
     "@ui/theme": "workspace:*",
