--- a/app/entrypoints/renderer/package.json
+++ b/app/entrypoints/renderer/package.json
@@ -15,6 +15,7 @@
     "@ui/icons": "workspace:*",
     "@ui/layout": "workspace:*",
     "@ui/progress": "workspace:*",
+    "@ui/scroll": "workspace:*",
     "@ui/theme": "workspace:*",
     "next": "14.1.0",
     "react": "18.2.0",
