--- a/ui/switch/package.json
+++ b/ui/switch/package.json
@@ -2,7 +2,9 @@
   "name": "@ui/switch",
   "main": "src/index.ts",
   "dependencies": {
-    "@atls-ui-parts/switch": "0.1.1"
+    "@atls-ui-parts/layout": "0.1.1",
+    "@atls-ui-parts/switch": "0.1.1",
+    "@ui/icons-test": "workspace:*"
   },
   "devDependencies": {
     "@emotion/react": "11.11.3",
