--- a/ui/modal/package.json
+++ b/ui/modal/package.json
@@ -2,6 +2,7 @@
 	"name": "@ui/modal",
 	"main": "src/index.ts",
 	"dependencies": {
+		"@atls-ui-parts/layout": "0.1.1",
 		"@atls-ui-parts/portal": "0.0.7"
 	},
 	"devDependencies": {
@@ -12,7 +13,8 @@
 		"@types/react-dom": "18.2.18",
 		"framer-motion": "10.16.1",
 		"react": "18.2.0",
-		"react-dom": "18.2.0"
+		"react-dom": "18.2.0",
+		"styled-system": "5.1.5"
 	},
 	"peerDependencies": {
 		"@emotion/css": "11.11.2",
@@ -20,6 +22,7 @@
 		"@emotion/styled": "11.11.0",
 		"framer-motion": "10.16.1",
 		"react": "18.2.0",
-		"react-dom": "18.2.0"
+		"react-dom": "18.2.0",
+		"styled-system": "*"
 	}
 }
