--- a/ui/card/package.json
+++ b/ui/card/package.json
@@ -4,16 +4,22 @@
   "license": "BSD-3-Clause",
   "main": "src/index.ts",
   "dependencies": {
-    "@emotion/react": "11.11.3",
-    "@emotion/styled": "11.11.0",
     "@ui/image": "workspace:*",
     "@ui/layout": "workspace:*",
-    "@ui/tag": "workspace:*",
+    "@ui/tag": "workspace:*"
+  },
+  "devDependencies": {
+    "@emotion/react": "11.11.3",
+    "@emotion/styled": "11.11.0",
+    "@types/react": "18.3.1",
+    "@types/react-dom": "18.3.0",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
-  "devDependencies": {
-    "@types/react": "18.2.48",
-    "@types/react-dom": "18.2.18"
+  "peerDependencies": {
+    "@emotion/react": "*",
+    "@emotion/styled": "*",
+    "react": "*",
+    "react-dom": "*"
   }
 }
