--- a/ui/sidebar/package.json
+++ b/ui/sidebar/package.json
@@ -3,18 +3,31 @@
   "version": "0.0.1",
   "license": "BSD-3-Clause",
   "main": "src/index.ts",
-  "dependencies": {
-    "@atls-ui-parts/sidebar": "0.1.1",
-    "@atls-ui-parts/switch": "0.1.1",
+  "devDependencies": {
+    "@emotion/css": "11.11.2",
     "@emotion/react": "11.11.3",
     "@emotion/styled": "11.11.0",
-    "framer-motion": "11.1.9",
+    "@types/react": "18.3.1",
+    "@types/react-dom": "18.3.0",
+    "@types/styled-system": "5.1.22",
     "react": "18.2.0",
+    "react-dom": "18.2.0",
     "styled-system": "5.1.5",
     "styled-tools": "1.7.2"
   },
-  "devDependencies": {
-    "@types/react": "18.3.1",
-    "@types/styled-system": "5.1.22"
+  "peerDependencies": {
+    "@emotion/react": "*",
+    "@emotion/styled": "*",
+    "react": "*",
+    "react-dom": "*",
+    "styled-system": "*",
+    "styled-tools": "*"
+  },
+  "dependencies": {
+    "@atls-ui-proto/divider": "0.1.1",
+    "@ui/avatar": "workspace:*",
+    "@ui/layout": "workspace:*",
+    "@ui/logo": "workspace:*",
+    "framer-motion": "11.1.9"
   }
 }
