--- a/ui/tag/package.json
+++ b/ui/tag/package.json
@@ -5,12 +5,16 @@
   "main": "src/index.ts",
   "dependencies": {
     "@ui/layout": "workspace:0.0.1",
-    "@ui/text": "workspace:0.0.1",
-    "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "@ui/text": "workspace:0.0.1"
   },
   "devDependencies": {
     "@types/react": "18.3.1",
-    "@types/react-dom": "18.3.0"
+    "@types/react-dom": "18.3.0",
+    "react": "18.2.0",
+    "react-dom": "18.2.0"
+  },
+  "peerDependencies": {
+    "react": "*",
+    "react-dom": "*"
   }
 }
