--- a/ui/text/package.json
+++ b/ui/text/package.json
@@ -4,14 +4,23 @@
   "license": "BSD-3-Clause",
   "main": "src/index.ts",
   "dependencies": {
-    "@atls-ui-parts/text": "0.1.3",
-    "@emotion/react": "11.11.3",
-    "@emotion/styled": "11.11.0",
-    "react": "18.2.0",
-    "styled-system": "5.1.5"
+    "@atls-ui-parts/text": "0.1.3"
   },
   "devDependencies": {
+    "@emotion/react": "11.11.3",
+    "@emotion/styled": "11.11.0",
     "@types/react": "18.3.1",
-    "@types/styled-system": "5.1.22"
+    "@types/react-dom": "18.3.0",
+    "@types/styled-system": "5.1.22",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "styled-system": "5.1.5"
+  },
+  "peerDependencies": {
+    "@emotion/react": "*",
+    "@emotion/styled": "*",
+    "react": "*",
+    "react-dom": "*",
+    "styled-system": "*"
   }
 }
