--- a/ui/dropdown/package.json
+++ b/ui/dropdown/package.json
@@ -2,23 +2,23 @@
   "name": "@ui/dropdown",
   "main": "src/index.ts",
   "dependencies": {
-    "@atls-ui-parts/layout": "*",
+    "@atls-ui-parts/layout": "0.1.1",
     "@atls-ui-parts/select": "0.1.1",
-    "@atls-ui-parts/text": "0.1.1",
+    "@atls-ui-parts/text": "0.1.3",
     "@atls-ui-proto/button": "0.1.1"
   },
   "devDependencies": {
-    "@atls-ui-parts/layout": "*",
+    "@atls-ui-parts/layout": "0.1.1",
     "@atls-ui-proto/button": "0.1.1",
     "@emotion/css": "11.11.2",
-    "@emotion/react": "11.11.3",
-    "@emotion/styled": "11.11.0",
-    "@types/react": "18.3.1",
+    "@emotion/react": "11.11.4",
+    "@emotion/styled": "11.11.5",
+    "@types/react": "18.3.2",
     "@types/react-dom": "18.3.0",
     "@types/styled-system": "5.1.22",
     "framer-motion": "10.16.1",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
     "react-laag": "2.0.5",
     "styled-system": "5.1.5",
     "styled-tools": "1.7.2"
