--- a/ui/text/package.json
+++ b/ui/text/package.json
@@ -3,6 +3,9 @@
   "version": "0.0.1",
   "license": "BSD-3-Clause",
   "main": "src/index.ts",
+  "exports": {
+    ".": "./src/index.ts"
+  },
   "dependencies": {
     "@atls-ui-parts/text": "0.1.3"
   },
