--- a/ui/utils/package.json
+++ b/ui/utils/package.json
@@ -3,6 +3,9 @@
   "version": "0.0.1",
   "license": "MIT",
   "main": "src/index.ts",
+  "exports": {
+    ".": "./src/index.ts"
+  },
   "dependencies": {
     "react-laag": "2.0.5"
   },
