--- a/ui/avatar/package.json
+++ b/ui/avatar/package.json
@@ -3,6 +3,9 @@
   "version": "0.0.1",
   "license": "BSD-3-Clause",
   "main": "src/index.ts",
+  "exports": {
+    ".": "./src/index.ts"
+  },
   "dependencies": {
     "@atls-ui-parts/avatar": "0.1.1",
     "@atls-ui-parts/scalable-content": "0.1.1",
