--- a/ui/card/package.json
+++ b/ui/card/package.json
@@ -3,6 +3,9 @@
   "version": "0.0.1",
   "license": "BSD-3-Clause",
   "main": "src/index.ts",
+  "exports": {
+    ".": "./src/index.ts"
+  },
   "dependencies": {
     "@ui/image": "workspace:*",
     "@ui/layout": "workspace:*",
