--- a/ui/image/package.json
+++ b/ui/image/package.json
@@ -3,18 +3,29 @@
   "version": "0.0.1",
   "license": "BSD-3-Clause",
   "main": "src/index.ts",
+  "exports": {
+    ".": "./src/index.ts"
+  },
   "dependencies": {
-    "@atls-ui-parts/image": "0.1.1",
+    "@atls-ui-parts/image": "0.1.1"
+  },
+  "devDependencies": {
     "@emotion/react": "11.11.3",
     "@emotion/styled": "11.11.0",
+    "@types/react": "18.3.1",
+    "@types/react-dom": "18.3.0",
+    "@types/styled-system": "5.1.22",
     "next": "14.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "styled-system": "5.1.5"
   },
-  "devDependencies": {
-    "@types/react": "18.3.1",
-    "@types/react-dom": "18.3.0",
-    "@types/styled-system": "5.1.22"
+  "peerDependencies": {
+    "@emotion/react": "*",
+    "@emotion/styled": "*",
+    "next": "*",
+    "react": "*",
+    "react-dom": "*",
+    "styled-system": "*"
   }
 }
