--- a/ui/layout/package.json
+++ b/ui/layout/package.json
@@ -3,15 +3,23 @@
   "version": "0.0.1",
   "license": "BSD-3-Clause",
   "main": "src/index.ts",
+  "exports": {
+    ".": "./src/index.ts"
+  },
   "dependencies": {
     "@atls-ui-parts/layout": "0.1.1",
-    "@emotion/react": "11.11.3",
-    "@emotion/styled": "11.11.0",
-    "react": "18.2.0",
     "styled-system": "5.1.5"
   },
   "devDependencies": {
+    "@emotion/react": "11.11.3",
+    "@emotion/styled": "11.11.0",
     "@types/react": "18.3.1",
-    "@types/styled-system": "5.1.22"
+    "@types/styled-system": "5.1.22",
+    "react": "18.2.0"
+  },
+  "peerDependencies": {
+    "@emotion/react": "*",
+    "@emotion/styled": "*",
+    "react": "*"
   }
 }
