--- a/ui/tag/package.json
+++ b/ui/tag/package.json
@@ -3,6 +3,9 @@
   "version": "0.0.1",
   "license": "BSD-3-Clause",
   "main": "src/index.ts",
+  "exports": {
+    ".": "./src/index.ts"
+  },
   "dependencies": {
     "@ui/layout": "workspace:0.0.1",
     "@ui/text": "workspace:0.0.1"
