--- a/ui/utils/package.json
+++ b/ui/utils/package.json
@@ -1,14 +1,15 @@
 {
   "name": "@ui/utils",
-  "exports": {
-    ".": "./src/index.ts"
-  },
+  "version": "0.0.1",
+  "private": true,
+  "license": "BSD-3-Clause",
+  "main": "src/index.ts",
   "dependencies": {
     "@atls-utils/use-hover": "0.0.2",
     "react-laag": "2.0.5"
   },
   "peerDependencies": {
-    "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react": "*",
+    "react-dom": "*"
   }
 }
