--- a/app/entrypoints/renderer/package.json
+++ b/app/entrypoints/renderer/package.json
@@ -9,8 +9,11 @@
     "prepack": "run build",
     "start": "node dist/src/index.cjs"
   },
-  "dependencies": {
+  "devDependencies": {
     "@emotion/react": "11.11.4",
+    "@types/node": "20.12.12",
+    "@types/react": "18.3.2",
+    "@types/react-dom": "18.3.0",
     "@ui/dropdown": "workspace:*",
     "@ui/icons-test": "workspace:*",
     "@ui/input": "workspace:*",
@@ -19,12 +22,7 @@
     "@ui/theme": "workspace:*",
     "next": "14.1.0",
     "react": "18.3.1",
-    "react-dom": "18.3.1"
-  },
-  "devDependencies": {
-    "@types/node": "20.12.12",
-    "@types/react": "18.3.2",
-    "@types/react-dom": "18.3.0",
+    "react-dom": "18.3.1",
     "typescript": "5.2.2"
   }
 }
