--- a/ui/dropdown/package.json
+++ b/ui/dropdown/package.json
@@ -1,5 +1,8 @@
 {
   "name": "@ui/dropdown",
+  "version": "0.0.1",
+  "private": true,
+  "license": "BSD-3-Clause",
   "main": "src/index.ts",
   "dependencies": {
     "@atls-ui-parts/layout": "0.1.1",
@@ -8,8 +11,6 @@
     "@atls-ui-proto/button": "0.1.1"
   },
   "devDependencies": {
-    "@atls-ui-parts/layout": "0.1.1",
-    "@atls-ui-proto/button": "0.1.1",
     "@emotion/css": "11.11.2",
     "@emotion/react": "11.11.4",
     "@emotion/styled": "11.11.5",
@@ -26,11 +27,11 @@
   "peerDependencies": {
     "@emotion/css": "*",
     "@emotion/react": "*",
-    "@emotion/styled": "11.11.0",
-    "framer-motion": "10.16.1",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "styled-system": "5.1.5",
+    "@emotion/styled": "*",
+    "framer-motion": "*",
+    "react": "*",
+    "react-dom": "*",
+    "styled-system": "*",
     "styled-tools": "*"
   }
 }
