--- a/ui/modal/package.json
+++ b/ui/modal/package.json
@@ -1,7 +1,11 @@
 {
   "name": "@ui/modal",
+  "version": "0.0.1",
+  "private": true,
+  "license": "BSD-3-Clause",
   "main": "src/index.ts",
   "dependencies": {
+    "@atls-ui-parts/condition": "0.1.1",
     "@atls-ui-parts/layout": "0.1.1",
     "@atls-ui-parts/portal": "0.0.7"
   },
@@ -17,12 +21,12 @@
     "styled-system": "5.1.5"
   },
   "peerDependencies": {
-    "@emotion/css": "11.11.2",
-    "@emotion/react": "11.11.3",
-    "@emotion/styled": "11.11.0",
-    "framer-motion": "10.16.1",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "@emotion/css": "*",
+    "@emotion/react": "*",
+    "@emotion/styled": "*",
+    "framer-motion": "*",
+    "react": "*",
+    "react-dom": "*",
     "styled-system": "*"
   }
 }
