--- a/ui/theme/package.json
+++ b/ui/theme/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@ui/theme",
   "version": "0.0.1",
+  "private": true,
   "license": "BSD-3-Clause",
   "main": "src/index.ts",
   "devDependencies": {
