fix: package extention fix

--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -1,3 +1,11 @@
+packageExtensions:
+  '@atls-ui-parts/input@*':
+    dependencies:
+      '@types/react': '*'
+  '@atls-ui-parts/switch@*':
+    dependencies:
+      '@types/react': '*'
+
 compressionLevel: mixed
 
 defaultSemverRangePrefix: ''
