--- a/ui/checkbox/package.json
+++ b/ui/checkbox/package.json
@@ -16,6 +16,7 @@
     "@emotion/styled": "11.11.5",
     "@types/react": "^18",
     "@types/styled-system": "^5",
+    "@ui/condition": "workspace:*",
     "@ui/icons": "workspace:*",
     "react-laag": "2.0.5"
   },
