--- a/ui/condition/package.json
+++ b/ui/condition/package.json
@@ -12,11 +12,14 @@
   "devDependencies": {
     "@emotion/react": "11.9.3",
     "@emotion/styled": "11.9.3",
+    "@types/react": "^18",
     "react": "18.2.0"
   },
   "peerDependencies": {
     "@emotion/react": "*",
     "@emotion/styled": "*",
+    "@types/react": "18.3.1",
+    "@types/react-dom": "18.3.0",
     "react": "*"
   }
 }
