--- a/ui/checkbox/package.json
+++ b/ui/checkbox/package.json
@@ -18,6 +18,7 @@
     "@types/styled-system": "^5",
     "@ui/condition": "workspace:*",
     "@ui/icons": "workspace:*",
+    "@ui/theme": "workspace:*",
     "react-laag": "2.0.5"
   },
   "devDependencies": {
