fix:theme refactoring

--- a/ui/avatar/package.json
+++ b/ui/avatar/package.json
@@ -8,8 +8,8 @@
   "main": "src/index.ts",
   "dependencies": {
     "@atls-ui-parts/avatar": "0.1.1",
-    "@atls-ui-parts/condition": "0.1.1",
     "@atls-ui-parts/styles": "0.1.1",
+    "@ui/condition": "workspace:*",
     "@ui/image": "workspace:*",
     "@ui/layout": "workspace:*",
     "@ui/theme": "workspace:*",
