--- a/ui/checkbox/package.json
+++ b/ui/checkbox/package.json
@@ -13,7 +13,7 @@
     "@atls-ui-parts/hidden-input": "0.1.1",
     "@atls-ui-parts/layout": "0.1.1",
     "@emotion/react": "11.11.4",
-    "@emotion/styled": "11.11.5",
+    "@emotion/styled": "11.11.0",
     "@types/react": "^18",
     "@types/styled-system": "^5",
     "@ui/condition": "workspace:*",
@@ -28,6 +28,7 @@
     "styled-tools": "1.7.2"
   },
   "peerDependencies": {
+    "glob": "*",
     "react": "*",
     "react-dom": "*",
     "styled-system": "*",
