--- a/ui/scroll/package.json
+++ b/ui/scroll/package.json
@@ -8,7 +8,8 @@
   },
   "main": "src/index.ts",
   "dependencies": {
-    "@ui/scroll": "workspace:*"
+    "@ui/scroll": "workspace:*",
+    "@ui/theme": "workspace:*"
   },
   "devDependencies": {
     "@emotion/react": "11.11.4",
