--- a/ui/divider/package.json
+++ b/ui/divider/package.json
@@ -8,23 +8,7 @@
   },
   "main": "src/index.ts",
   "dependencies": {
+    "@atls-ui-proto/divider": "*",
     "@ui/layout": "workspace:*"
-  },
-  "devDependencies": {
-    "@emotion/react": "11.11.4",
-    "@emotion/styled": "11.11.5",
-    "@types/styled-system": "^5",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "styled-system": "5.1.5",
-    "styled-tools": "1.7.2"
-  },
-  "peerDependencies": {
-    "@emotion/react": "*",
-    "@emotion/styled": "*",
-    "@types/react": "*",
-    "@types/react-dom": "*",
-    "styled-system": "*",
-    "styled-tools": "*"
   }
 }
