--- a/ui/condition/package.json
+++ b/ui/condition/package.json
@@ -8,5 +8,15 @@
   "main": "src/index.ts",
   "dependencies": {
     "@atls-ui-parts/condition": "0.1.1"
+  },
+  "devDependencies": {
+    "@emotion/react": "11.11.4",
+    "@emotion/styled": "11.11.5",
+    "react": "18.3.1"
+  },
+  "peerDependencies": {
+    "@emotion/react": "*",
+    "@emotion/styled": "*",
+    "react": "*"
   }
 }
