--- a/ui/utils/package.json
+++ b/ui/utils/package.json
@@ -1,18 +1,12 @@
 {
   "name": "@ui/utils",
   "version": "0.0.1",
-  "license": "MIT",
-  "exports": {
-    ".": "./src/index.ts"
-  },
+  "private": true,
+  "license": "BSD-3-Clause",
   "main": "src/index.ts",
   "dependencies": {
+    "@atls-utils/use-hover": "0.0.2",
     "react-laag": "2.0.5"
-  },
-  "devDependencies": {
-    "@types/react-dom": "17.0.20",
-    "react": "18.2.0",
-    "react-dom": "18.2.0"
   },
   "peerDependencies": {
     "react": "*",
