--- a/ui/tag/package.json
+++ b/ui/tag/package.json
@@ -7,17 +7,19 @@
   },
   "main": "src/index.ts",
   "dependencies": {
-    "@ui/layout": "workspace:0.0.1",
-    "@ui/text": "workspace:0.0.1",
+    "@ui/layout": "workspace:*",
+    "@ui/text": "workspace:*",
     "@ui/theme": "workspace:*"
   },
   "devDependencies": {
+    "@emotion/react": "11.11.4",
     "@types/react": "18.3.2",
     "@types/react-dom": "18.3.0",
     "react": "18.3.1",
     "react-dom": "18.3.1"
   },
   "peerDependencies": {
+    "@emotion/react": "*",
     "react": "*",
     "react-dom": "*"
   }
