--- a/ui/logo/package.json
+++ b/ui/logo/package.json
@@ -7,12 +7,14 @@
     "@ui/icons": "workspace:*"
   },
   "devDependencies": {
+    "@emotion/react": "11.11.4",
     "@types/react": "18.3.2",
     "@types/react-dom": "18.3.0",
     "react": "18.3.1",
     "react-dom": "18.3.1"
   },
   "peerDependencies": {
+    "@emotion/react": "*",
     "react": "*",
     "react-dom": "*"
   }
