--- a/app/fragments/organization-modal/package.json
+++ b/app/fragments/organization-modal/package.json
@@ -4,6 +4,14 @@
   "private": true,
   "license": "BSD-3-Clause",
   "main": "src/index.ts",
+  "dependencies": {
+    "@ui/button": "workspace:*",
+    "@ui/input": "workspace:*",
+    "@ui/layout": "workspace:*",
+    "@ui/modal": "workspace:*",
+    "@ui/switch": "workspace:*",
+    "@ui/text": "workspace:*"
+  },
   "devDependencies": {
     "react": "18.3.1"
   },
