--- a/ui/dropdown/package.json
+++ b/ui/dropdown/package.json
@@ -31,6 +31,7 @@
     "framer-motion": "*",
     "react": "*",
     "react-dom": "*",
+    "react-laag": "*",
     "styled-system": "*",
     "styled-tools": "*"
   }
