--- a/app/fragments/organization-modal/package.json
+++ b/app/fragments/organization-modal/package.json
@@ -13,9 +13,14 @@
     "@ui/text": "workspace:*"
   },
   "devDependencies": {
-    "react": "18.3.1"
+    "@emotion/react": "11.11.4",
+    "@types/react": "18.3.2",
+    "@types/react-dom": "18.3.0",
+    "react": "18.3.1",
+    "react-dom": "18.3.1"
   },
   "peerDependencies": {
-    "react": "*"
+    "react": "*",
+    "react-dom": "*"
   }
 }
