--- a/app/fragments/organization-card/package.json
+++ b/app/fragments/organization-card/package.json
@@ -4,6 +4,12 @@
   "private": true,
   "license": "BSD-3-Clause",
   "main": "src/index.ts",
+  "dependencies": {
+    "@ui/button": "workspace:*",
+    "@ui/icons": "workspace:*",
+    "@ui/layout": "workspace:*",
+    "@ui/text": "workspace:*"
+  },
   "devDependencies": {
     "react": "18.3.1",
     "react-dom": "18.3.1"
