--- a/app/fragments/organization-card/package.json
+++ b/app/fragments/organization-card/package.json
@@ -7,14 +7,19 @@
   "dependencies": {
     "@ui/button": "workspace:*",
     "@ui/icons": "workspace:*",
+    "@ui/image": "workspace:*",
     "@ui/layout": "workspace:*",
     "@ui/text": "workspace:*"
   },
   "devDependencies": {
+    "@emotion/react": "11.11.4",
+    "@emotion/styled": "11.11.5",
     "react": "18.3.1",
     "react-dom": "18.3.1"
   },
   "peerDependencies": {
+    "@emotion/react": "*",
+    "@emotion/styled": "*",
     "react": "*",
     "react-dom": "*"
   }
