--- a/app/fragments/organization-card/package.json
+++ b/app/fragments/organization-card/package.json
@@ -14,13 +14,17 @@
   "devDependencies": {
     "@emotion/react": "11.11.4",
     "@emotion/styled": "11.11.5",
+    "@types/styled-system": "5.1.22",
     "react": "18.3.1",
-    "react-dom": "18.3.1"
+    "react-dom": "18.3.1",
+    "styled-system": "5.1.5"
   },
   "peerDependencies": {
     "@emotion/react": "*",
     "@emotion/styled": "*",
+    "@types/styled-system": "*",
     "react": "*",
-    "react-dom": "*"
+    "react-dom": "*",
+    "styled-system": "*"
   }
 }
