--- a/app/entrypoints/renderer/package.json
+++ b/app/entrypoints/renderer/package.json
@@ -19,5 +19,11 @@
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "typescript": "5.2.2"
+  },
+  "dependencies": {
+    "@app/user-card": "workspace:*",
+    "@app/users-grid": "workspace:*",
+    "@ui/button": "workspace:*",
+    "@ui/icons": "workspace:*"
   }
 }
