--- a/app/entrypoints/renderer/package.json
+++ b/app/entrypoints/renderer/package.json
@@ -11,6 +11,7 @@
   },
   "devDependencies": {
     "@emotion/react": "11.11.4",
+    "@fragments/organization-card": "workspace:*",
     "@types/node": "20.12.12",
     "@types/react": "18.3.2",
     "@types/react-dom": "18.3.0",
