--- a/ui/checkbox/package.json
+++ b/ui/checkbox/package.json
@@ -22,6 +22,7 @@
     "react-laag": "2.0.5"
   },
   "devDependencies": {
+    "@emotion/css": "11.11.2",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "styled-system": "5.1.5",
