--- a/app/entrypoints/renderer/package.json
+++ b/app/entrypoints/renderer/package.json
@@ -13,6 +13,7 @@
     "@emotion/react": "11.11.4",
     "@fragments/organization-card": "workspace:*",
     "@fragments/organization-card-grid": "workspace:*",
+    "@fragments/organization-modal": "workspace:*",
     "@types/node": "20.12.12",
     "@types/react": "18.3.2",
     "@types/react-dom": "18.3.0",
