--- a/app/fragments/organization-card/package.json
+++ b/app/fragments/organization-card/package.json
@@ -17,6 +17,7 @@
     "@types/styled-system": "5.1.22",
     "react": "18.3.1",
     "react-dom": "18.3.1",
+    "react-intl": "6.6.8",
     "styled-system": "5.1.5"
   },
   "peerDependencies": {
@@ -25,6 +26,7 @@
     "@types/styled-system": "*",
     "react": "*",
     "react-dom": "*",
+    "react-intl": "*",
     "styled-system": "*"
   }
 }
