--- a/app/fragments/add-member-to-organization-modal/package.json
+++ b/app/fragments/add-member-to-organization-modal/package.json
@@ -14,13 +14,15 @@
   },
   "devDependencies": {
     "@emotion/react": "11.11.4",
-    "@types/react": "18.3.2",
+    "@types/react": "18.3.3",
     "@types/react-dom": "18.3.0",
     "react": "18.3.1",
-    "react-dom": "18.3.1"
+    "react-dom": "18.3.1",
+    "react-intl": "6.6.8"
   },
   "peerDependencies": {
     "react": "*",
-    "react-dom": "*"
+    "react-dom": "*",
+    "react-intl": "*"
   }
 }
