--- a/app/fragments/add-member-modal/package.json
+++ b/app/fragments/add-member-modal/package.json
@@ -11,20 +11,23 @@
     "@ui/layout": "workspace:*",
     "@ui/modal": "workspace:*",
     "@ui/switch": "workspace:*",
-    "@ui/text": "workspace:*"
+    "@ui/text": "workspace:*",
+    "@ui/utils": "workspace:*"
   },
   "devDependencies": {
     "@emotion/react": "11.11.4",
     "@emotion/styled": "11.11.5",
-    "@types/react": "18.3.2",
+    "@types/react": "18.3.3",
     "@types/react-dom": "18.3.0",
     "react": "18.3.1",
-    "react-dom": "18.3.1"
+    "react-dom": "18.3.1",
+    "react-intl": "6.6.8"
   },
   "peerDependencies": {
     "@emotion/react": "*",
     "@emotion/styled": "*",
     "react": "*",
-    "react-dom": "*"
+    "react-dom": "*",
+    "react-intl": "*"
   }
 }
