--- a/app/entrypoints/renderer/package.json
+++ b/app/entrypoints/renderer/package.json
@@ -16,12 +16,13 @@
     "@fragments/organization-card": "workspace:*",
     "@fragments/organization-card-grid": "workspace:*",
     "@types/node": "20.12.12",
-    "@types/react": "18.3.2",
+    "@types/react": "18.3.3",
     "@types/react-dom": "18.3.0",
     "@ui/theme": "workspace:*",
     "next": "14.1.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
+    "react-intl": "6.6.8",
     "typescript": "5.2.2"
   }
 }
