--- a/app/fragments/app-users-grid/package.json
+++ b/app/fragments/app-users-grid/package.json
@@ -6,13 +6,14 @@
     ".": "./src/index.ts"
   },
   "dependencies": {
-    "@app/user-card": "workspace:*",
     "@ui/layout": "workspace:*"
   },
   "peerDependencies": {
+    "@emotion/react": "*",
     "react": "*"
   },
   "devDependencies": {
+    "@emotion/react": "11.11.4",
     "@types/react": "^18.3.2"
   }
 }
