feat(all package.json): type module

--- a/ui/utils/package.json
+++ b/ui/utils/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.1",
   "private": true,
   "license": "BSD-3-Clause",
+  "type": "module",
   "main": "src/index.ts",
   "dependencies": {
     "@atls-utils/use-hover": "0.0.2",
