--- a/ui/image/package.json
+++ b/ui/image/package.json
@@ -2,6 +2,7 @@
   "name": "@ui/image",
   "version": "0.0.1",
   "license": "BSD-3-Clause",
+  "type": "module",
   "main": "src/index.ts",
   "dependencies": {
     "@atls-ui-parts/image": "0.1.1"
