--- a/ui/logo/package.json
+++ b/ui/logo/package.json
@@ -2,6 +2,7 @@
   "name": "@ui/logo",
   "version": "0.0.1",
   "license": "BSD-3-Clause",
+  "type": "module",
   "main": "src/index.ts",
   "dependencies": {
     "@ui/icons": "workspace:*"
