--- a/ui/tag/package.json
+++ b/ui/tag/package.json
@@ -2,6 +2,7 @@
   "name": "@ui/tag",
   "version": "0.0.1",
   "license": "BSD-3-Clause",
+  "type": "module",
   "exports": {
     ".": "./src/index.ts"
   },
