--- a/ui/icons/package.json
+++ b/ui/icons/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "license": "BSD-3-Clause",
   "type": "module",
-  "main": "src/index.js",
+  "main": "src/index.ts",
   "scripts": {
     "build": "generate-icons src/ -i ./icons"
   },
