fix:nextImage imnplemented

--- a/app/fragments/app-main-logo/package.json
+++ b/app/fragments/app-main-logo/package.json
@@ -1,6 +1,8 @@
 {
   "name": "@app/main-logo",
   "version": "0.0.1",
+  "type": "module",
+  "private": true,
   "main": "src/index.ts",
   "exports": {
     ".": "./src/index.ts"
@@ -12,10 +14,12 @@
   },
   "peerDependencies": {
     "@emotion/react": "*",
-    "react": "*"
+    "react": "*",
+    "react-intl": "*"
   },
   "devDependencies": {
     "@emotion/react": "11.11.4",
-    "@types/react": "^18.3.2"
+    "@types/react": "^18.3.2",
+    "react-intl": "6.6.8"
   }
 }
