--- a/app/fragments/app-notifications-modal/package.json
+++ b/app/fragments/app-notifications-modal/package.json
@@ -1,17 +1,21 @@
 {
   "name": "@app/notifications-modal",
   "version": "0.0.1",
+  "type": "module",
+  "private": true,
   "main": "src/index.ts",
   "exports": {
     ".": "./src/index.ts"
   },
   "peerDependencies": {
     "@emotion/react": "*",
-    "react": "*"
+    "react": "*",
+    "react-intl": "*"
   },
   "devDependencies": {
     "@emotion/react": "11.11.4",
-    "@types/react": "^18.3.2"
+    "@types/react": "^18.3.2",
+    "react-intl": "6.6.8"
   },
   "dependencies": {
     "@ui/avatar": "workspace:*",
