--- a/app/entrypoints/renderer/package.json
+++ b/app/entrypoints/renderer/package.json
@@ -19,5 +19,10 @@
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "typescript": "5.2.2"
+  },
+  "dependencies": {
+    "@app/organizations-modal": "workspace:*",
+    "D": "1.0.0",
+    "react-intl": "6.6.8"
   }
 }
