--- a/app/fragments/app-user-card/package.json
+++ b/app/fragments/app-user-card/package.json
@@ -1,6 +1,8 @@
 {
   "name": "@app/user-card",
   "version": "0.0.1",
+  "type": "module",
+  "private": true,
   "main": "src/index.ts",
   "exports": {
     ".": "./src/index.ts"
