--- a/ui/image/package.json
+++ b/ui/image/package.json
@@ -4,7 +4,8 @@
   "license": "BSD-3-Clause",
   "main": "src/index.ts",
   "dependencies": {
-    "@atls-ui-parts/image": "0.1.1"
+    "@atls-ui-parts/image": "0.1.1",
+    "@atls-ui-parts/next-image": "0.1.2"
   },
   "devDependencies": {
     "@emotion/react": "11.11.4",
