fix(theme): theme type fix on fragments

--- a/app/fragments/add-member-modal/package.json
+++ b/app/fragments/add-member-modal/package.json
@@ -13,6 +13,7 @@
     "@ui/modal": "workspace:*",
     "@ui/switch": "workspace:*",
     "@ui/text": "workspace:*",
+    "@ui/theme": "workspace:*",
     "@ui/utils": "workspace:*"
   },
   "devDependencies": {
