--- a/app/fragments/add-member-to-organization-modal/package.json
+++ b/app/fragments/add-member-to-organization-modal/package.json
@@ -11,7 +11,8 @@
     "@ui/layout": "workspace:*",
     "@ui/modal": "workspace:*",
     "@ui/switch": "workspace:*",
-    "@ui/text": "workspace:*"
+    "@ui/text": "workspace:*",
+    "@ui/theme": "workspace:*"
   },
   "devDependencies": {
     "@emotion/react": "11.11.4",
