--- a/app/fragments/app-animated-card/package.json
+++ b/app/fragments/app-animated-card/package.json
@@ -24,6 +24,7 @@
     "@ui/image": "workspace:*",
     "@ui/layout": "workspace:*",
     "@ui/text": "workspace:0.0.1",
+    "@ui/theme": "workspace:*",
     "framer-motion": "10.16.1"
   }
 }
