--- a/app/fragments/app-main-logo/package.json
+++ b/app/fragments/app-main-logo/package.json
@@ -10,7 +10,8 @@
   "dependencies": {
     "@ui/icons": "workspace:*",
     "@ui/layout": "workspace:*",
-    "@ui/text": "workspace:0.0.1"
+    "@ui/text": "workspace:0.0.1",
+    "@ui/theme": "workspace:*"
   },
   "peerDependencies": {
     "@emotion/react": "*",
