--- a/app/fragments/app-notifications-modal/package.json
+++ b/app/fragments/app-notifications-modal/package.json
@@ -23,6 +23,7 @@
     "@ui/layout": "workspace:*",
     "@ui/modal": "workspace:*",
     "@ui/scroll": "workspace:*",
-    "@ui/text": "workspace:0.0.1"
+    "@ui/text": "workspace:0.0.1",
+    "@ui/theme": "workspace:*"
   }
 }
