--- a/app/fragments/app-user-badge/package.json
+++ b/app/fragments/app-user-badge/package.json
@@ -19,6 +19,7 @@
     "@ui/avatar": "workspace:*",
     "@ui/card": "workspace:*",
     "@ui/layout": "workspace:*",
-    "@ui/text": "workspace:0.0.1"
+    "@ui/text": "workspace:0.0.1",
+    "@ui/theme": "workspace:*"
   }
 }
