--- a/app/fragments/app-users-title/package.json
+++ b/app/fragments/app-users-title/package.json
@@ -11,7 +11,8 @@
     "@ui/button": "workspace:*",
     "@ui/icons": "workspace:*",
     "@ui/layout": "workspace:*",
-    "@ui/text": "workspace:0.0.1"
+    "@ui/text": "workspace:0.0.1",
+    "@ui/theme": "workspace:*"
   },
   "peerDependencies": {
     "@emotion/react": "*",
