--- a/ui/tag/package.json
+++ b/ui/tag/package.json
@@ -1,6 +1,8 @@
 {
   "name": "@ui/tag",
   "version": "0.0.1",
+  "type": "module",
+  "private": true,
   "license": "BSD-3-Clause",
   "exports": {
     ".": "./src/index.ts"
