--- a/ui/text/package.json
+++ b/ui/text/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@ui/text",
   "version": "0.0.1",
+  "private": true,
   "license": "BSD-3-Clause",
   "main": "src/index.ts",
   "dependencies": {
