feat(org-card.fragment): show modals on button; handlers to backdrop

--- a/app/fragments/organization-card/package.json
+++ b/app/fragments/organization-card/package.json
@@ -6,6 +6,8 @@
   "type": "module",
   "main": "src/index.ts",
   "dependencies": {
+    "@app/users-modal": "workspace:*",
+    "@fragments/add-member-to-organization-modal": "workspace:*",
     "@ui/button": "workspace:*",
     "@ui/icons": "workspace:*",
     "@ui/image": "workspace:*",
