feat(users-title.fragment): add modal to plus button

--- a/app/fragments/app-users-title/package.json
+++ b/app/fragments/app-users-title/package.json
@@ -8,6 +8,7 @@
   },
   "main": "src/index.ts",
   "dependencies": {
+    "@fragments/add-member-modal": "workspace:*",
     "@ui/button": "workspace:*",
     "@ui/icons": "workspace:*",
     "@ui/layout": "workspace:*",
