feat(entrypoint): wrap content into layout

--- a/app/entrypoints/renderer/package.json
+++ b/app/entrypoints/renderer/package.json
@@ -10,6 +10,7 @@
     "start": "node dist/src/index.cjs"
   },
   "dependencies": {
+    "@fragments/base-layout": "workspace:*",
     "react-intl": "6.6.8"
   },
   "devDependencies": {
