feat:added organizations modal to users page, added notifications modal

--- a/app/fragments/app-user-card/package.json
+++ b/app/fragments/app-user-card/package.json
@@ -8,6 +8,7 @@
     ".": "./src/index.ts"
   },
   "dependencies": {
+    "@ui/button": "workspace:*",
     "@ui/card": "workspace:*",
     "@ui/checkbox": "workspace:*",
     "@ui/divider": "workspace:*",
