--- a/app/fragments/app-theme-selector/package.json
+++ b/app/fragments/app-theme-selector/package.json
@@ -8,6 +8,7 @@
     ".": "./src/index.ts"
   },
   "dependencies": {
+    "@app/notifications-modal": "workspace:*",
     "@ui/button": "workspace:*",
     "@ui/icons": "workspace:*",
     "@ui/layout": "workspace:*",
