--- a/app/fragments/app-theme-selector/package.json
+++ b/app/fragments/app-theme-selector/package.json
@@ -19,11 +19,14 @@
     "@emotion/styled": "11.11.5",
     "@types/react": "^18.3.2",
     "@types/react-dom": "18.3.0",
-    "react-dom": "18.3.1"
+    "@types/styled-system": "5.1.22",
+    "react-dom": "18.3.1",
+    "styled-system": "5.1.5"
   },
   "peerDependencies": {
     "@emotion/react": "*",
     "@emotion/styled": "*",
-    "react": "*"
+    "react": "*",
+    "styled-system": "*"
   }
 }
