--- a/app/pages/organizations-page/package.json
+++ b/app/pages/organizations-page/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@pages/organizations-page",
   "version": "0.0.1",
+  "type": "module",
   "main": "src/index.ts",
   "dependencies": {
     "@app/theme-selector": "workspace:*",
