--- a/ui/modal/package.json
+++ b/ui/modal/package.json
@@ -8,7 +8,8 @@
   "dependencies": {
     "@atls-ui-parts/condition": "0.1.1",
     "@atls-ui-parts/layout": "0.1.1",
-    "@atls-ui-parts/portal": "0.0.7"
+    "@atls-ui-parts/portal": "0.0.7",
+    "@ui/theme": "workspace:*"
   },
   "devDependencies": {
     "@emotion/css": "11.11.2",
