--- a/app/fragments/add-member-to-organization-modal/package.json
+++ b/app/fragments/add-member-to-organization-modal/package.json
@@ -16,6 +16,7 @@
   },
   "devDependencies": {
     "@emotion/react": "11.11.4",
+    "@faker-js/faker": "8.4.1",
     "@types/react": "18.3.3",
     "@types/react-dom": "18.3.0",
     "react": "18.3.1",
@@ -23,6 +24,7 @@
     "react-intl": "6.6.8"
   },
   "peerDependencies": {
+    "@faker-js/faker": "*",
     "react": "*",
     "react-dom": "*",
     "react-intl": "*"
