--- a/app/fragments/app-users-modal/package.json
+++ b/app/fragments/app-users-modal/package.json
@@ -23,12 +23,14 @@
   },
   "devDependencies": {
     "@emotion/react": "11.11.4",
+    "@faker-js/faker": "8.4.1",
     "@types/react": "^18.3.2",
     "@types/react-dom": "18.3.0",
     "react-intl": "6.6.8"
   },
   "peerDependencies": {
     "@emotion/react": "*",
+    "@faker-js/faker": "*",
     "react": "*",
     "react-intl": "*"
   }
