feat:dummy data for usercard, data interfaces

--- a/app/fragments/app-user-card/package.json
+++ b/app/fragments/app-user-card/package.json
@@ -8,6 +8,7 @@
     ".": "./src/index.ts"
   },
   "dependencies": {
+    "@app/organizations-modal": "workspace:*",
     "@ui/button": "workspace:*",
     "@ui/card": "workspace:*",
     "@ui/checkbox": "workspace:*",
