--- a/app/entrypoints/renderer/package.json
+++ b/app/entrypoints/renderer/package.json
@@ -13,8 +13,9 @@
     "react-intl": "6.6.8"
   },
   "devDependencies": {
-    "@app/base-layout-fragment": "workspace:*",
+    "@app/base-layout": "workspace:*",
     "@app/index-page": "workspace:*",
+    "@app/loading": "workspace:*",
     "@app/organizations-page": "workspace:*",
     "@app/registration-page": "workspace:*",
     "@app/users-page": "workspace:*",
