--- a/ui/sidebar/package.json
+++ b/ui/sidebar/package.json
@@ -24,6 +24,7 @@
     "@types/react": "18.3.3",
     "@types/react-dom": "18.3.0",
     "@types/styled-system": "5.1.22",
+    "next": "14.1.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "styled-system": "5.1.5",
