draft: authorization; scopes

--- a/app/entrypoints/renderer/src/.env
+++ b/app/entrypoints/renderer/src/.env
@@ -1,2 +1,2 @@
-NEXT_PUBLIC_GH_CLIENT_ID="Ov23liNeRJx00eB3BQ0I"
-NEXT_PUBLIC_GH_CLIENT_SECRET="0f5f25790b73c443f44cc12e9f73b795c7d65b97"
+NEXT_PUBLIC_GH_CLIENT_ID="Iv23li0DEslMzZtY5zmd"
+NEXT_PUBLIC_GH_CLIENT_SECRET="1fbf511e6d65dcae1bedc1e60837b00e7e66ad8a"
