--- a/app/entrypoints/renderer/package.json
+++ b/app/entrypoints/renderer/package.json
@@ -22,6 +22,7 @@
     "@app/registration-page": "workspace:*",
     "@app/users-page": "workspace:*",
     "@emotion/react": "11.11.4",
+    "@octokit/app": "15.1.0",
     "@types/node": "20.12.12",
     "@types/react": "18.3.3",
     "@types/react-dom": "18.3.0",
