fix(gh-app-server-component): fix private key auth method

--- a/globals/github-server-app/package.json
+++ b/globals/github-server-app/package.json
@@ -8,7 +8,7 @@
   },
   "main": "src/index.ts",
   "dependencies": {
-    "@globals/privates": "workspace:*"
+    "@globals/utils": "workspace:*"
   },
   "devDependencies": {
     "@octokit/app": "15.1.0"
