--- a/app/entrypoints/renderer/src/.env
+++ b/app/entrypoints/renderer/src/.env
@@ -1,2 +1,3 @@
+GH_APP_ID=926806
 NEXT_PUBLIC_GH_CLIENT_ID="Iv23li0DEslMzZtY5zmd"
 NEXT_PUBLIC_GH_CLIENT_SECRET="1fbf511e6d65dcae1bedc1e60837b00e7e66ad8a"
