fix(globals.data): fix data generation; query suntax fixes

--- a/globals/data/package.json
+++ b/globals/data/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@globals/data",
   "version": "0.0.1",
+  "type": "module",
   "main": "src/index.ts",
   "scripts": {
     "generate": "graphql-codegen --config ./src/codegen.ts"
